--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "howler": "^2.1.2",
     "multer": "^1.4.2"
-  }
+  },
+  "devDependencies": {}
 }
